...
        android:layout_marginBottom="8dp"
        android:src="@drawable/bkg_oval"
        tools:tint="@sample/tasks.json/data/backgroundTint" />


    <ImageView
        android:id="@+id/img_delete"
        android:contentDescription="@string/desc_img_delete"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="16dp"
...
